2002-03-31  Fred Kiefer <FredKiefer@gmx.de>

	* Source/Window.m
	[setFrame:display:] do nothing if the frame after all the
	corrections did not change from its current extend.
	In [makeKeyWindow] and [makeMainWindow] do nothing if the window
	is already key/main.
	
2002-03-31  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSMatrix.m :
	Use integer coordinates for _cellSize when autoresizing.
	* Source/NSBox.m ([NSBox -calcSizesAllowingNegative:])
	(case NSAtBottom & case NSAtTop):
	Use integer coordinates and small cosmetic changes.
	* Source/NSOutlineView.m ([NSOutlineView -initWithCoder:]): 
	Bugfix.
	* Source/NSClipView.m ([NSClipView -constrainScrollPoint:]): 
	Make sure the difference between old position and new position
	is an integer vector.
	* Source/NSTableView.m ([NSTableView -initWithCoder:]):
	Bugfix.

2002-03-30  Adam Fedor  <fedor@gnu.org>

	* gui/Model/GMAppKit.m (-encodeWithModelArchiver:): Encode an
	empty array rather than crash.
	* gui/Model/GMArchiveObjects.m (-colorSpaceName): Implement for 
	NSObject to to work around a bug in MacOSX 10.1.x
	* gui/Model/GNUmakefile: Include libgmodel with building nib2gmodel.
	* gui/Model/IBClasses.m: Fix debug for compiling on Darwin.

2002-03-29  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSTableView.m ([NSTableView -encodeWithCoder:]): 
	([NSTableView -initWithCoder:]): encodes _allowsColumnReordering.
	* Source/NSTableView.m (computeNewSelection):
	fixed bug when updating selection.
	* Source/NSTableColumn.m ([NSTableColumn -encodeWithCoder:]):
	([NSTableColumn -initWithCoder:]): new encoding scheme
	(fixes a bug when decoding a tableview)

Thu Mar 28 11:08:56 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	Patches by Jeff Teunissen <deek@d2dc.net>:
	* Source/NSWorkspace.m ([-homeDirectoryImage]): New method.
	([-iconForFile:]): Use the new method to return an image for
	NSHomeDirectory().
	* Images/GNUmakefile (IMAGE_FILES): Added Common_HomeDirectory.tiff.